--- a/app/templates/style.erb
+++ b/app/templates/style.erb
@@ -11,22 +11,130 @@ var round = Math.round, ceil = Math.ceil;
     border: 0;
 }
 
+table {
+    border-spacing: 0;
+}
+
 body {
     background-color: black;
     color: black;
     overflow: hidden;
+    font-size: <%= gwidth %>px;
 }
 
-#hposition {
+div#hposition {
     position:absolute;
     top:50%;
     left:50%;
     overflow:show;
 }
 
-#vposition {
+div#vposition {
     position:absolute;
     top:-<%= round(height/2) %>px;
     left:-<%= round(width/2) %>px;
+}
+
+div#doublepage {
+    position: absolute;
+    width: <%= width %>px;
+    height: <%= height %>px;
+    overflow: hidden;
+    background-color: #222222;
+}
+
+div#leftpage {
+    position: relative;
+    width: 48%;
+    height: 96%;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-top: 1.5%;
+    margin-bottom: 1.5%;
+    float: left;
+    overflow: hidden;
+    background-color: white;
+}
+
+div#rightpage {
+    position: relative;
+    width: 48%;
+    height: 96%;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-top: 1.5%;
+    margin-bottom: 1.5%;
+    float: right;
+    overflow: hidden;
+    background-color: white;
+}
+
+div#leftview {
+    position: relative;
+    width: 96%;
+    height: 96%;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    background-color: lightgray;
+}
+
+div#rightview {
+    position: relative;
+    width: 96%;
+    height: 96%;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    background-color: lightgray;
+}
+
+div#leftgrid {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: lightgray;
+}
+
+div#rightgrid {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: lightgray;
+}
+
+div#leftgrid table {
+    width: 100%;
+    height: 100%;
+}
+
+div#rightgrid table {
+    width: 100%;
+    height: 100%;
+    font-szie: <%= gwidth %>px;
+}
+
+div#leftgrid table tr {
+    width: 100%;
+    height: 1%;
+}
+
+div#rightgrid table tr {
+    width: 100%;
+    height: 1%;
+}
+
+div#leftgrid table tr td {
+    width: 2.5%;
+    height: 100%;
+    border: 1px gray solid;
+}
+
+div#rightgrid table tr td {
+    width: 2.5%;
+    height: 100%;
+    border: 1px gray solid;
 }
 
