--- a/app/templates/style.erb
+++ b/app/templates/style.erb
@@ -4,22 +4,57 @@ var round = Math.round, ceil = Math.ceil;
 
 %>
 
+/* reset.css */
+
 * {
-    outline: 0;
-    padding: 0;
-    margin: 0;
-    border: 0;
+    margin:0;padding:0;border:0;
+}
+
+body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, code, del, dfn, em, img, q, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, dialog, figure, footer, header, hgroup, nav, section {
+    vertical-align:baseline;
+}
+
+article, aside, dialog, figure, footer, header, hgroup, nav, section {
+    font-weight:inherit;font-style:inherit;font-size:100%;font-family:inherit;display:block;
+}
+
+body {
+    line-height: <%= gheight %>px;background:white;
 }
 
 table {
-    border-spacing: 0;
+    border-collapse:collapse;border-spacing:0;
+}
+
+caption, th, td {
+    text-align:left;font-weight:normal;float:none !important;
+}
+
+table, th, td {
+    vertical-align:middle;
+}
+
+blockquote:before, blockquote:after, q:before, q:after {
+    content:'';
+}
+
+blockquote, q {
+    quotes:"" "";
+}
+
+a img {
+    border:none;
+}
+
+:focus {
+    outline:0;
 }
 
 body {
     background-color: black;
     color: black;
     overflow: hidden;
-    font-size: <%= gwidth %>px;
+    font-size: <%= gwidth - 2 %>px;
 }
 
 div#hposition {
@@ -108,33 +143,66 @@ div#rightgrid {
 div#leftgrid table {
     width: 100%;
     height: 100%;
+    border-spacing: 0;
+    border-collapse: collapse;
+    font-size: <%= gwidth - 2 %>px;
 }
 
 div#rightgrid table {
     width: 100%;
     height: 100%;
-    font-szie: <%= gwidth %>px;
+    border-spacing: 0;
+    border-collapse: collapse;
+    font-size: <%= gwidth - 2 %>px;
 }
 
 div#leftgrid table tr {
     width: 100%;
-    height: 1%;
+    height: <%= gheight - 2 %>px;
 }
 
 div#rightgrid table tr {
     width: 100%;
-    height: 1%;
+    height: <%= gheight - 2 %>px;
 }
 
 div#leftgrid table tr td {
-    width: 2.5%;
+    width: <%= gwidth %>px;
     height: 100%;
     border: 1px gray solid;
 }
 
 div#rightgrid table tr td {
-    width: 2.5%;
+    width: <%= gwidth %>px;
     height: 100%;
     border: 1px gray solid;
+}
+
+div.content h1 {
+    line-height: <%= 3 * gheight %>px;
+}
+
+div.content h2 {
+    line-height: <%= 2 * gheight %>px;
+}
+
+div.content h3 {
+    line-height: <%= 1.5 * gheight %>px;
+}
+
+div.content h4 {
+    line-height: <%= gheight %>px;
+}
+
+div.content h5 {
+    line-height: <%= gheight %>px;
+}
+
+div.content h6 {
+    line-height: <%= gheight %>px;
+}
+
+div.content p {
+    line-height: <%= gheight %>px;
 }
 
