--- a/app/templates/main.erb
+++ b/app/templates/main.erb
@@ -8,6 +8,7 @@
   <script src="/javascripts/style-loader.js"></script>
   <script src="/javascripts/magazine.js"></script>
   <title>维基日刊</title>
+  <link rel="stylesheet" href="/issues/<%= year %>/<%= month %>/<%= day %>.css" type="text/css" media="screen" />
 </head>
 <body>
 
