cover west works

--- a/app/templates/style.erb
+++ b/app/templates/style.erb
@@ -311,6 +311,8 @@ div.content ol li {
     position: relative;
 }
 
+/* cover: center */
+
 #cover-center-u {
     position: absolute;
     top: 10px;
@@ -318,6 +320,7 @@ div.content ol li {
     width: 60%;
     height: <%= round(0.15 * pageHeight)  %>px;
     font-size: xx-large;
+    font-weight: bold;
 }
 
 #cover-center-w {
@@ -378,6 +381,223 @@ div.content ol li {
 }
 
 #cover-center-z ul li {
+    margin-left: 0.5em;
+}
+
+/* cover: full */
+
+#cover-full-u {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 60%;
+    font-size: xx-large;
+    font-weight: bold;
+}
+
+#cover-full-w {
+    position: absolute;
+    top:  0px;
+    left: 0px;
+    height:  <%= pageHeight %>px;
+    width: 100%;
+}
+
+#cover-full-w img {
+    width: 100%;
+    margin: 0 auto;
+}
+
+#cover-full-x {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 40%;
+    font-size: small;
+}
+
+#cover-full-x ul {
+    margin-left: 0em;
+}
+
+#cover-full-x ul li {
+    margin-left: 0.5em;
+}
+
+#cover-full-y {
+    position: absolute;
+    top:  <%= round(0.8 * pageHeight)  %>px;
+    left: 10px;
+    width: 40%;
+    font-size: small;
+}
+
+#cover-full-y ul {
+    margin-left: 0em;
+}
+
+#cover-full-y ul li {
+    margin-left: 0.5em;
+}
+
+#cover-full-z {
+    position: absolute;
+    top:  <%= round(0.8 * pageHeight)  %>px;
+    right: 10px;
+    width: 40%;
+    font-size: small;
+}
+
+#cover-full-z ul {
+    margin-left: 0em;
+}
+
+#cover-full-z ul li {
+    margin-left: 0.5em;
+}
+
+/* cover: north */
+
+#cover-north-u {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 60%;
+    font-size: xx-large;
+    font-weight: bold;
+}
+
+#cover-north-w {
+    position: absolute;
+    top:  0px;
+    left: 0px;
+    height:  <%= 0.6 * pageHeight %>px;
+    width: 100%;
+}
+
+#cover-north-w img {
+    width: 100%;
+    margin: 0 auto;
+}
+
+#cover-north-x {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 40%;
+    font-size: small;
+}
+
+#cover-north-x ul {
+    margin-left: 0em;
+}
+
+#cover-north-x ul li {
+    margin-left: 0.5em;
+}
+
+#cover-north-y {
+    position: absolute;
+    top:  <%= round(0.8 * pageHeight)  %>px;
+    left: 10px;
+    width: 40%;
+    font-size: small;
+}
+
+#cover-north-y ul {
+    margin-left: 0em;
+}
+
+#cover-north-y ul li {
+    margin-left: 0.5em;
+}
+
+#cover-north-z {
+    position: absolute;
+    top:  <%= round(0.8 * pageHeight)  %>px;
+    right: 10px;
+    width: 40%;
+    font-size: small;
+}
+
+#cover-north-z ul {
+    margin-left: 0em;
+}
+
+#cover-north-z ul li {
+    margin-left: 0.5em;
+}
+
+/* cover: west */
+
+#cover-west-v {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 15%;
+    line-height: <%= 3*lineHeight %>px;
+    font-size: xx-large;
+    font-weight: bold;
+}
+
+#cover-west-w {
+    position: absolute;
+    top:  0px;
+    left: 0px;
+    height:  <%= pageHeight %>px;
+    width: 80%;
+}
+
+#cover-west-w img {
+    height: 100%;
+    margin: 0;
+}
+
+#cover-west-x {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 40%;
+    font-size: small;
+}
+
+#cover-west-x ul {
+    margin-left: 0em;
+}
+
+#cover-west-x ul li {
+    margin-left: 0.5em;
+}
+
+#cover-west-y {
+    position: absolute;
+    top:  <%= round(0.8 * pageHeight)  %>px;
+    left: 10px;
+    width: 40%;
+    font-size: small;
+}
+
+#cover-west-y ul {
+    margin-left: 0em;
+}
+
+#cover-west-y ul li {
+    margin-left: 0.5em;
+}
+
+#cover-west-z {
+    position: absolute;
+    top:  <%= round(0.8 * pageHeight)  %>px;
+    right: 10px;
+    width: 40%;
+    font-size: small;
+}
+
+#cover-west-z ul {
+    margin-left: 0em;
+}
+
+#cover-west-z ul li {
     margin-left: 0.5em;
 }
 
