cover north works

--- a/app/templates/style.erb
+++ b/app/templates/style.erb
@@ -465,6 +465,7 @@ div.content ol li {
     width: 60%;
     font-size: xx-large;
     font-weight: bold;
+    z-index: 1;
 }
 
 #cover-north-w {
@@ -473,11 +474,13 @@ div.content ol li {
     left: 0px;
     height:  <%= 0.6 * pageHeight %>px;
     width: 100%;
+    z-index: 0;
 }
 
 #cover-north-w img {
     width: 100%;
     margin: 0 auto;
+    z-index: 0;
 }
 
 #cover-north-x {
