--- a/app/templates/issue.erb
+++ b/app/templates/issue.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="copyright" href="http://creativecommons.org/licenses/by-sa/3.0/" />
-  <script src="/javascripts/jquery.js"></script>
+  <script src="/javascripts/jquery-min.js"></script>
   <script src="/javascripts/underscore-min.js"></script>
   <script src="/javascripts/style-loader.js"></script>
   <script src="/javascripts/magazine.js"></script>
