--- a/app/templates/issue.erb
+++ b/app/templates/issue.erb
@@ -14,6 +14,11 @@
 <div id="hposition">
 <div id="vposition">
 
+<div id="leftbar">
+    <div id="go_prev">上一页</div>
+    <div id="go_toc_left">目录</div>
+</div>
+
 <div id="doublepage">
     <div id="leftpage">
       <div id="leftview">
@@ -25,6 +30,11 @@
         <div id="rightcontent" class="content"></div>
       </div>
     </div>
+</div>
+
+<div id="rightbar">
+    <div id="go_next">下一页</div>
+    <div id="go_toc_right">目录</div>
 </div>
 
 </div>
