--- a/app/templates/editor/issues.erb
+++ b/app/templates/editor/issues.erb
@@ -7,6 +7,7 @@
   <script src="/javascripts/underscore-min.js"></script>
   <script src="/javascripts/style-loader.js"></script>
   <script src="/javascripts/magazine.js"></script>
+  <script src="/javascripts/editor.js"></script>
   <title>维基日刊</title>
 </head>
 <body>
@@ -113,7 +114,7 @@
 <div id="contents"></div>
 <script>
 $(function () {
-    daily.load('<%= year %>/<%= month %>/<%= day %>');
+    daily.load('<%= year %>/<%= month %>/<%= day %>', editor);
 });
 </script>
 </body>
