first commit of editor

--- a/app/templates/editor/issues.erb
+++ b/app/templates/editor/issues.erb
@@ -9,6 +9,7 @@
   <script src="/javascripts/magazine.js"></script>
   <script src="/javascripts/editor.js"></script>
   <title>维基日刊</title>
+  <link rel="stylesheet" href="/styles/editor.css" type="text/css" media="screen" />
 </head>
 <body>
 
@@ -17,7 +18,19 @@
 
 <div id="leftbar">
     <div id="go_prev">上一页</div>
-    <div id="go_toc_left">目录</div>
+    <div id="go_toc_left">目　录</div>
+</div>
+
+<div id="lefttoolbar">
+    <div class="tool tool_cr">加回车</div>
+    <div class="tool tool_del">删　除</div>
+    <div class="tool tool_left">居　左</div>
+    <div class="tool tool_center">居　中</div>
+    <div class="tool tool_right">居　右</div>
+    <div class="tool tool_expand">扩　大</div>
+    <div class="tool tool_shrink">缩　小</div>
+    <div class="tool tool_prev">前　移</div>
+    <div class="tool tool_next">后　移</div>
 </div>
 
 <div id="doublepage">
@@ -105,7 +118,19 @@
 
 <div id="rightbar">
     <div id="go_next">下一页</div>
-    <div id="go_toc_right">目录</div>
+    <div id="go_toc_right">目　录</div>
+</div>
+
+<div id="righttoolbar">
+    <div class="tool tool_cr">加回车</div>
+    <div class="tool tool_del">删　除</div>
+    <div class="tool tool_left">居　左</div>
+    <div class="tool tool_center">居　中</div>
+    <div class="tool tool_right">居　右</div>
+    <div class="tool tool_expand">扩　大</div>
+    <div class="tool tool_shrink">缩　小</div>
+    <div class="tool tool_prev">前　移</div>
+    <div class="tool tool_next">后　移</div>
 </div>
 
 </div>
