--- a/app/templates/issue.erb
+++ b/app/templates/issue.erb
@@ -15,8 +15,8 @@
 <div id="vposition">
 
 <div id="leftbar">
-    <div id="go_prev">上一页</div>
-    <div id="go_toc_left">目　录</div>
+    <div id="go_prev" class="clickable">上一页</div>
+    <div id="go_toc_left" class="clickable">目　录</div>
 </div>
 
 <div id="doublepage">
@@ -33,8 +33,8 @@
 </div>
 
 <div id="rightbar">
-    <div id="go_next">下一页</div>
-    <div id="go_toc_right">目　录</div>
+    <div id="go_next" class="clickable">下一页</div>
+    <div id="go_toc_right" class="clickable">目　录</div>
 </div>
 
 </div>
