--- a/app/templates/editor/issues.erb
+++ b/app/templates/editor/issues.erb
@@ -17,8 +17,8 @@
 <div id="vposition">
 
 <div id="leftbar">
-    <div id="go_prev">上一页</div>
-    <div id="go_toc_left">目　录</div>
+    <div id="go_prev" class="clickable">上一页</div>
+    <div id="go_toc_left" class="clickable">目　录</div>
 </div>
 
 <div id="lefttoolbar">
@@ -117,8 +117,8 @@
 </div>
 
 <div id="rightbar">
-    <div id="go_next">下一页</div>
-    <div id="go_toc_right">目　录</div>
+    <div id="go_next" class="clickable">下一页</div>
+    <div id="go_toc_right" class="clickable">目　录</div>
 </div>
 
 <div id="righttoolbar">
