expand, shrink and save in editor

--- a/app/templates/editor/issues.erb
+++ b/app/templates/editor/issues.erb
@@ -31,6 +31,7 @@
     <div class="tool tool_shrink">缩　小</div>
     <div class="tool tool_prev">前　移</div>
     <div class="tool tool_next">后　移</div>
+    <div class="tool tool_save">保　存</div>
 </div>
 
 <div id="doublepage">
@@ -131,6 +132,7 @@
     <div class="tool tool_shrink">缩　小</div>
     <div class="tool tool_prev">前　移</div>
     <div class="tool tool_next">后　移</div>
+    <div class="tool tool_save">保　存</div>
 </div>
 
 </div>
