fix editor and style

--- a/app/templates/style.erb
+++ b/app/templates/style.erb
@@ -399,7 +399,7 @@ div.content ol li {
 }
 
 #cover-center-y ul {
-    margin-left: 0em;
+    margin-left: 1em;
 }
 
 #cover-center-y ul li {
@@ -431,6 +431,7 @@ div.content ol li {
     width: 60%;
     font-size: xx-large;
     font-weight: bold;
+    z-index: 10;
 }
 
 #cover-full-w {
@@ -472,7 +473,7 @@ div.content ol li {
 }
 
 #cover-full-y ul {
-    margin-left: 0em;
+    margin-left: 1em;
 }
 
 #cover-full-y ul li {
@@ -547,7 +548,7 @@ div.content ol li {
 }
 
 #cover-north-y ul {
-    margin-left: 0em;
+    margin-left: 1em;
 }
 
 #cover-north-y ul li {
@@ -620,7 +621,7 @@ div.content ol li {
 }
 
 #cover-west-y ul {
-    margin-left: 0em;
+    margin-left: 1em;
 }
 
 #cover-west-y ul li {
