--- a/app/templates/issue.erb
+++ b/app/templates/issue.erb
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="copyright" href="http://creativecommons.org/licenses/by-sa/3.0/" />
+  <link rel="alternate" type="application/rss+xml" title="RSS 2.0"
+   href="http://zh.wikipedia.org/w/index.php?title=Wikipedia:%E9%A6%96%E9%A1%B5/rss&action=raw&ctype=application/rss+xml">
   <script src="/javascripts/jquery-min.js"></script>
   <script src="/javascripts/underscore-min.js"></script>
   <script src="/javascripts/style-loader.js"></script>
