--- a/app/templates/issue.erb
+++ b/app/templates/issue.erb
@@ -28,6 +28,7 @@
 <div id="vposition">
 
 <div id="leftbar">
+    <div id="go_cal" class="clickable">回日历</div>
     <div id="go_prev" class="clickable">上一页</div>
     <div id="go_toc_left" class="clickable">目　录</div>
 </div>
@@ -46,6 +47,7 @@
 </div>
 
 <div id="rightbar">
+    <div id="go_cal" class="clickable">回日历</div>
     <div id="go_next" class="clickable">下一页</div>
     <div id="go_toc_right" class="clickable">目　录</div>
 </div>
