add title on calendar and fix languages

--- a/app/templates/editor/issues.erb
+++ b/app/templates/editor/issues.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="content-language" content="zh-cn">
   <link rel="copyright" href="http://creativecommons.org/licenses/by-sa/3.0/" />
   <script src="/javascripts/jquery-min.js"></script>
   <script src="/javascripts/underscore-min.js"></script>
