--- a/app/templates/main.erb
+++ b/app/templates/main.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="content-language" content="zh-cn">
   <link rel="copyright" href="http://creativecommons.org/licenses/by-sa/3.0/" />
   <link rel="alternate" type="application/rss+xml" title="RSS 2.0"
    href="http://zh.wikipedia.org/w/index.php?title=Wikipedia:%E9%A6%96%E9%A1%B5/rss&action=raw&ctype=application/rss+xml">
@@ -25,6 +26,7 @@
 </head>
 <body>
 
+<h2 style="text-align:center;color:white;margin-top:5px;">维基日刊（Alpha）</h2>
 <div id="hposition">
 <div id="vposition">
 
