--- a/app/templates/editor/issues.erb
+++ b/app/templates/editor/issues.erb
@@ -9,10 +9,12 @@
   <script src="/javascripts/style-loader.js"></script>
   <script src="/javascripts/magazine.js"></script>
   <script src="/javascripts/editor.js"></script>
-  <title>维基日刊</title>
+  <title>维基日刊（<%= month %>月<%= day %>日）</title>
   <link rel="stylesheet" href="/styles/editor.css" type="text/css" media="screen" />
 </head>
 <body>
+
+<h2 style="text-align:center;color:white;margin-top:5px;">维基日刊（<%= month %>月<%= day %>日）</h2>
 
 <div id="hposition">
 <div id="vposition">
