--- a/app/templates/main.erb
+++ b/app/templates/main.erb
@@ -27,6 +27,8 @@
 <body>
 
 <h2 style="text-align:center;color:white;margin-top:5px;">维基日刊（Alpha）</h2>
+<div id="notice"><ul><li><a href="https://github.com/mountain/distilled/issues">意见反馈</a></li><li><a href="https://github.com/mountain/distilled">参与开发</a></li></ul></div>
+
 <div id="hposition">
 <div id="vposition">
 
