--- a/public/styles/calendar.css
+++ b/public/styles/calendar.css
@@ -3,6 +3,19 @@
     color: black;
 }
 
+#notice  {
+    color: white;
+    float: right;
+    margin-top: 1em;
+    margin-right: 5%;
+    width: 5%;
+    text-align: left;
+}
+
+#notice  a {
+    color: white;
+}
+
 #calendar {
     width: 100%;
     height: 95%;
@@ -19,6 +32,7 @@
     text-align: center;
     vertical-align: middle;
     border: 1px solid lightgray;
+    padding-top: 3px;
 }
 
 
