3rd partial commit of the mainpage redesign

--- a/app/templates/main.erb
+++ b/app/templates/main.erb
@@ -8,7 +8,6 @@
   <script src="/javascripts/jquery.mousewheel.js"></script>
   <script src="/javascripts/jcarousellite.min.js"></script>
   <script src="/javascripts/underscore-min.js"></script>
-  <script src="/javascripts/style-loader.js"></script>
   <script src="/javascripts/carousel.js"></script>
   <title>维基新知－首页</title>
   <link rel="stylesheet" href="/styles/main.css" type="text/css" media="screen" />
@@ -33,9 +32,9 @@
   <h1>维基日刊<sup>Alpha</sup></h1>
   <p>每日从维基百科最新的编辑成果中遴选出文章结集成一本杂志。</p>
   </div>
-  <div class="previous"><img src="/images/p.gif" width="7px"></div>
+  <div class="previous"><img src="/images/p.png" width="40px"></div>
   <div id="daily-detail" class="major detail right"></div>
-  <div class="next"><img src="/images/n.gif" width="7px"></div>
+  <div class="next"><img src="/images/n.png" width="40px"></div>
 </div>
 
 <div id="comingsoon" class="section">
