--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,6 +1,7 @@
 body {
     width: 960px;
     margin: 0 auto;
+    background-color: #1f1f1f;
 }
 
 #header {
@@ -53,7 +54,7 @@ body {
 }
 
 .major {
-    width: 70%;
+    width: 65%;
 }
 
 .minor {
@@ -164,9 +165,10 @@ body {
 .cover-small-center .cover-small-w table {
     width: 100%;
     height: 100%;
+    border-spacing: 0;
 }
 
-.cover-small-center .cover-small-w table tr td div{
+.cover-small-center .cover-small-w table tr td div {
     margin: auto;
     line-height: 100%;
 }
