--- a/app/templates/main.erb
+++ b/app/templates/main.erb
@@ -16,9 +16,9 @@
 <div id="header">
   <div id="logo">
       <a href="./" title="维基新知"><img src="/images/logo-title.png" width="240" height="60" alt="维基新知"/></a>
-      <div id="title">普及新知，传播自由文化</div>
+      <!--div id="title">普及新知，传播自由文化</div-->
   </div>
-  <div id="menu-container">
+  <div id="menu-container" class="corner-half">
     <ul class="menu">
       <li class="menuitem yellow">日刊</li>
       <li class="menuitem blue">图书</li>
@@ -27,9 +27,9 @@
   </div>
 </div>
 
-<div id="daily" class="section">
+<div id="daily" class="section corner-all">
   <div id="daily-intro" class="minor intro left">
-  <h1>维基日刊<sup>Alpha</sup></h1>
+  <h1 class="yellow-color">维基日刊<sup>Alpha</sup></h1>
   <p>每日从维基百科最新的编辑成果中遴选出文章结集成一本杂志。</p>
   </div>
   <div class="previous"><img src="/images/p.png" width="40px"></div>
@@ -37,23 +37,22 @@
   <div class="next"><img src="/images/n.png" width="40px"></div>
 </div>
 
-<div id="comingsoon" class="section">
-  <h1>计划中</h1>
-  <div class="left">
+<div id="planed" class="section">
+  <div id="books" class="left corner-all">
     <div class="left">
       <img src="http://commons.wikimedia.org/w/thumb.php?f=Carl_Spitzweg_021.jpg&w=130" />
     </div>
     <div class="right intro">
-      <h1>维基图书<sup>Planed</sup></h1>
-      <p>维基百科优秀文章和维基文库作成的电子书。</p>
+      <h1 class="blue-color">维基图书<sup>计划中</sup></h1>
+      <p>维基百科和维基文库优秀文章作成的电子书。</p>
     </div>
   </div>
-  <div class="right">
+  <div id="square" class="right corner-all">
     <div class="left">
       <img src="http://commons.wikimedia.org/w/thumb.php?f=Frankfurt_Am_Main-Morgenstern-KAVFFM-007-Der_Roemerberg_in_Frankfurt_a_M.jpg&w=200" />
     </div>
     <div class="right intro">
-      <h1>维基广场<sup>Planed</sup></h1>
+      <h1 class="red-color">维基广场<sup>计划中</sup></h1>
       <p>维基百科上的讨论、Twitter的维基相关热点。</p>
     </div>
   </div>
